# Basic usage, [Using PCL in your own project](https://pcl.readthedocs.io/projects/tutorials/en/latest/using_pcl_pcl_config.html#using-pcl-pcl-config)
cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(plane_pcl)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(plane_extractor plane_extractor.cpp)
target_link_libraries(plane_extractor ${PCL_LIBRARIES})

