# Basic usage, [Using PCL in your own project](https://pcl.readthedocs.io/projects/tutorials/en/latest/using_pcl_pcl_config.html#using-pcl-pcl-config)
cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(filter_pcl)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcl_voxel_filter pcl_voxel_filter.cpp)
target_link_libraries(pcl_voxel_filter ${PCL_LIBRARIES})

